# move

./: CMakeLists.txt  README.md  package.xml
action/: Amount.action
include/move/: MovementAmountDesignation_H.h  MovementPointDesignation_H.h  MovementVelocityDesignation_H.h  amount.h  velocity.h
msg/: Amount.msg  Straight.msg  Velocity.msg
scripts/: visualizer.py  visualizer_amount.py  visualizer_velocity.py
src/: Move.hpp  MovementAmountDesignation.cpp  MovementAmountDesignation_old.cpp  MovementAmountDesignation_old2.cpp  MovementAmountDesignation_old3.cpp  MovementPoint.cpp  MovementPointDesignation.cpp  MovementVelocityDesignation.cpp  MovementVelocityDesignation_h.cpp  MovementVelocityDesignation_old.cpp  P_Move.hpp  T_Move.hpp  T_Move_old.hpp  amount.cpp  amount_move.cpp  target_move.cpp  test_move.cpp  test_send.cpp  velocity.cpp
